# dice_backend

./: .gitignore  Cargo.toml
dice_backend/: Cargo.toml  build.sh  release.sh  rustfmt.sh  test.idk
dice_backend/src/: cfgbuilder.rs  err  formatter.rs  macros.rs  main.rs  namespace.rs  notacfg.rs  parser_output.rs  run.rs  seahasher.rs  syntaxhelper.rs  validator.rs  value.lalrpop  value.rs
dice_backend/src/cfgbuilder/: collection.rs  expression.rs  identifier.rs  mod.rs  stack.rs
dice_backend/src/exec/: coll.rs  expr.rs  future_type.rs  mod.rs  return_type.rs  stack.rs
dice_backend/src/inliner/: coll.rs  expr.rs  mod.rs
dice_backend/src/linkage/: collection.rs  expr.rs  identifier.rs  mod.rs
dice_backend/src/namespace/: block.rs  blockexpression.rs  mod.rs  namespace.rs
dice_backend/src/notacfg/: expression_collection.rs  mod.rs  typedata.rs
dice_backend/src/ordering/: coll.rs  datum.rs  element.rs  expr.rs  lambda.rs  mod.rs  ord.rs  order.rs  report.rs
dice_backend/src/parser_output/: abstractsyntaxtree.rs  analysisdeclaration.rs  constantdeclaration.rs  expression.rs  functiondeclaration.rs  functioninvoke.rs  literal.rs  literalvalue.rs  mod.rs  operation.rs  operationresult.rs  statement.rs  statements.rs  structures.rs  terminalexpression.rs  typedata.rs  variabledeclaration.rs  varreference.rs
dice_backend/src/peephole/: mod.rs  traits.rs
dice_backend/src/runner/: coll.rs  expr.rs  mod.rs  stack.rs
dice_backend/src/runtime/: coll.rs  consts.rs  datum.rs  element.rs  lambda.rs  math.rs  mod.rs  report.rs  smol_vec.rs
src/: err  formatter.rs  (+5 more)
(+54 files in other folders)
