[package]
name = "dice_backend"
version = "0.1.0"
authors = ["cody laeder <codylaeder@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.17.2"

[dependencies]
lalrpop-util = "0.17.2"
clap = "2.33.0"
regex = "0.2.1"
seahash = "3.0.6"
rayon = "1.3.0"

[features]
default = []
drop_unreachable_branches = []
