[package]
name = "dice_backend"
version = "0.1.0"
authors = ["cody laeder <codylaeder@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.17.2"

[dependencies]
smallvec = "1.3.0"
lazy_static = "1.4.0"
rand = "0.7.3"
lalrpop-util = "0.17.2"
clap = "2.33.0"
regex = "0.2.1"
seahash = "3.0.6"
itertools = "0.9.0"
jemallocator = "0.3.2"

[features]
default = []
drop_unreachable_branches = []

[profile.release]
opt-level = 3
debug = true
lto = true
codegen-units = 1
panic = 'unwind'
overflow-checks = false
